--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,70 @@ h1, h2, h3, h4 {
 .gotopagelinks a {
     padding: 12px;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+tr:hover {
+    color: grey;
+}
+
+.m-center {
+    text-align: center;
+    margin-left: 4px;
+    color: black;
+}
+
+.m-center:hover {
+    color: grey;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #ad1b1b;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+}
+
+input[type=submit]:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
+.forms {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
